--- a/res/layout/activity_font_manager_list.xml
+++ b/res/layout/activity_font_manager_list.xml
@@ -1,16 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.toraysoft.zitimanager_lib.FontManagerListActivity" >
+    android:orientation="vertical" >
 
-    <com.toraysoft.zitimanager_lib.FontListView
-        android:id="@+id/listview_font_manager"
+    <include layout="@layout/menu_back" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.toraysoft.zitimanager_lib.FontManagerListActivity" >
 
-</RelativeLayout>
+        <com.toraysoft.zitimanager_lib.FontListView
+            android:id="@+id/listview_font_manager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
+</LinearLayout>
